# bird-cloud-gnn

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .prospector.yml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.dev.md  README.md  next_steps.md  project_setup.md  pyproject.toml  setup.cfg  sonar-project.properties
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/next_steps/: 01_sonarcloud_integration.md  02_citation.md  03_readthedocs.md  04_zenodo_integration.md  05_linting.md
.github/workflows/: build.yml  documentation.yml
bird_cloud_gnn/: __init__.py  callback.py  cross_validation.py  early_stopper.py  fake.py  gnn-model.py  gnn-pipeline.py  gnn_model.py  kfold_evaluate.py  my_module.py  radar_dataset.py
docs/: Makefile  conf.py  index.rst  make.bat  workflow.md
tests/: conftest.py  test_cross_validation.py  test_fake.py  test_gnn-model.py  test_gnn_model.py  test_my_module.py  test_radar_dataset.py
